[package]
name = "locallink"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aprs-encode = "0.1.0"
panic-halt = "0.2.0"

[dependencies.sparkfun-pro-micro]
git = "https://github.com/rahix/avr-hal"
rev = "885e8ec6d6d2fe34f26a1e2697a99f41092f0985"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"